// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyDropdown component should hide policies that the user cant select 1`] = `
<SelectFieldWrapper
  label="Record level policy to apply to this PID"
  name="test"
  required={true}
  validation={
    Array [
      [Function],
    ]
  }
>
  <WithStyles(MenuItem)
    disabled={false}
    key="0"
    value={1}
  >
    Administrators
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    disabled={false}
    key="1"
    value={2}
  >
    Theses Assessors
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    disabled={true}
    key="2"
    value={3}
  >
    Evidence Assessors
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    disabled={true}
    key="3"
    value={4}
  >
    Staff and Students
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    disabled={true}
    key="4"
    value={5}
  >
    Public
  </WithStyles(MenuItem)>
</SelectFieldWrapper>
`;

exports[`PolicyDropdown component should render properly 1`] = `
<SelectFieldWrapper
  label="Record level policy to apply to this PID"
  name="test"
  required={true}
  validation={
    Array [
      [Function],
    ]
  }
>
  <WithStyles(MenuItem)
    disabled={true}
    value=""
  />
  <WithStyles(MenuItem)
    disabled={false}
    key="0"
    value={1}
  >
    Administrators
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    disabled={false}
    key="1"
    value={2}
  >
    Theses Assessors
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    disabled={false}
    key="2"
    value={3}
  >
    Evidence Assessors
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    disabled={false}
    key="3"
    value={4}
  >
    Staff and Students
  </WithStyles(MenuItem)>
  <WithStyles(MenuItem)
    disabled={false}
    key="4"
    value={5}
  >
    Public
  </WithStyles(MenuItem)>
</SelectFieldWrapper>
`;
